Fix datatable layout issues with new compact format.
Reviewed-on: http://review.couchbase.org/86223
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/data_display/qw-json-tree-table.css
+++ b/query-ui/ui-current/data_display/qw-json-tree-table.css
@@ -207,7 +207,7 @@ td.ajtd-type-array {
   vertical-align: top;
   white-space: normal;
   font-size: .75rem; /* same as the header font for alignment HACK */
-  padding: .125rem;
+  padding: .1rem;
 }
 
 .data-table-special-value {
